--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>N & G Wedding Invitation</title>
 
-  <!-- ✅ Social Preview (Open Graph + Twitter) -->
+  <!-- ✅ Social Preview -->
   <meta property="og:title" content="N & G Wedding Invitation">
   <meta property="og:description" content="Join us in celebrating our wedding – details inside!">
   <meta property="og:image" content="https://boulosna-oss.github.io/NG/NGV1.jpg">
@@ -33,8 +33,8 @@
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
-    .rsvp-button {
-      margin-top: 20px;
+    .button {
+      margin-top: 15px;
       padding: 14px 28px;
       font-size: 18px;
       font-weight: bold;
@@ -45,18 +45,38 @@
       cursor: pointer;
       text-decoration: none;
       transition: transform 0.2s, box-shadow 0.2s;
+      display: inline-block;
+      text-align: center;
     }
-    .rsvp-button:hover {
+    .button:hover {
       transform: scale(1.05);
       box-shadow: 0 6px 20px rgba(0,0,0,0.25);
     }
+    .links {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin-top: 20px;
+      width: 90%;
+      max-width: 400px;
+    }
+    .location-button {
+      padding: 12px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      color: #fff;
+      background: #0077cc;
+      border-radius: 8px;
+      text-decoration: none;
+      text-align: center;
+      transition: background 0.3s;
+    }
+    .location-button:hover {
+      background: #005fa3;
+    }
     @media (max-width: 600px) {
-      body {
-        padding: 10px;
-      }
-      .rsvp-button {
-        width: 90%;
-        text-align: center;
+      .button, .location-button {
+        width: 100%;
       }
     }
   </style>
@@ -64,9 +84,13 @@
 <body>
   <img src="NGV1.jpg" alt="Wedding Invitation">
 
-  <!-- ✅ RSVP button -->
-  <a href="https://forms.gle/YOUR_FORM_LINK" target="_blank" class="rsvp-button">
-    RSVP Now
-  </a>
+  <!-- ✅ RSVP Button -->
+  <a href="https://forms.gle/YOUR_FORM_LINK" target="_blank" class="button">RSVP Now</a>
+
+  <!-- ✅ Location Buttons -->
+  <div class="links">
+    <a href="https://goo.gl/maps/YOURCEREMONYLINK" target="_blank" class="location-button">📍 Ceremony Location</a>
+    <a href="https://goo.gl/maps/YOURPARTYLINK" target="_blank" class="location-button">🎉 After-Party Location</a>
+  </div>
 </body>
 </html>
