--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
   <img src="NGV1.jpg" alt="Wedding Invitation">
 
   <!-- ✅ RSVP Button -->
-  <a href="https://forms.gle/YOUR_FORM_LINK" target="_blank" class="button">RSVP Now</a>
+  <a href="https://tally.so/r/wkgg0Z" target="_blank" class="button">RSVP Now</a>
 
   <!-- ✅ Location Buttons -->
   <div class="links">
-    <a href="https://goo.gl/maps/YOURCEREMONYLINK" target="_blank" class="location-button">📍 Ceremony Location</a>
-    <a href="https://goo.gl/maps/YOURPARTYLINK" target="_blank" class="location-button">🎉 After-Party Location</a>
+    <a href="https://maps.app.goo.gl/hTUUWhsSGGaYTgAA7" target="_blank" class="location-button">📍 Ceremony Location</a>
+    <a href="https://maps.app.goo.gl/Taur2JZ4g4Ja76VH9" target="_blank" class="location-button">🎉 After-Party Location</a>
   </div>
 </body>
 </html>
+
