--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
     <img src="NGV1.jpg" alt="Wedding Invitation">
 
     <!-- ✅ Buttons overlayed on image -->
-    <a href="https://maps.app.goo.gl/YOURCHURCHLINK" target="_blank" class="overlay-button church">⛪ Church</a>
-    <a href="https://maps.app.goo.gl/hTUUWhsSGGaYTgAA7" target="_blank" class="overlay-button ceremony">📍 Ceremony</a>
-    <a href="https://maps.app.goo.gl/Taur2JZ4g4Ja76VH9" target="_blank" class="overlay-button afterparty">🎉 After-Party</a>
+    <a href="https://maps.app.goo.gl/ZQKweWGzjHopsQ4M7?g_st=aw" target="_blank" class="overlay-button church"> Church</a>
+    <a href="https://maps.app.goo.gl/hTUUWhsSGGaYTgAA7" target="_blank" class="overlay-button ceremony"> Reception</a>
+    <a href="https://maps.app.goo.gl/Taur2JZ4g4Ja76VH9" target="_blank" class="overlay-button afterparty"> After-Party</a>
     <a href="https://tally.so/r/wkgg0Z" target="_blank" class="overlay-button rsvp">RSVP Now</a>
   </div>
 </body>
 </html>
+
