--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
   <map name="invitemap">
     <!-- Church -->
     <area shape="circle" coords="533,1745,27" 
-          href="https://maps.app.goo.gl/YOURCHURCH" 
+          href="https://maps.app.goo.gl/ZQKweWGzjHopsQ4M7?g_st=aw" 
           alt="Church" title="Church" target="_blank">
 
     <!-- Oasis -->
     <area shape="rect" coords="400,5500,650,5600" 
-          href="https://maps.app.goo.gl/YOUROASIS" 
+          href="https://maps.app.goo.gl/hTUUWhsSGGaYTgAA7" 
           alt="Oasis" title="Oasis" target="_blank">
 
     <!-- Riah -->
     <area shape="poly" coords="555,7891,600,7900,580,7950" 
-          href="https://maps.app.goo.gl/YOURRIAH" 
+          href="https://maps.app.goo.gl/Taur2JZ4g4Ja76VH9" 
           alt="Riah" title="Riah" target="_blank">
 
     <!-- RSVP -->
@@ -69,3 +69,4 @@
   </script>
 </body>
 </html>
+
