--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     <area shape="rect" coords="500,8100,600,8200" 
           href="https://tally.so/r/wkgg0Z" 
           alt="RSVP" title="RSVP" target="_blank">
+    <!-- Accommodation -->
+    <area shape="rect" coords="500,8950,570,9000" 
+          href="https://tinyurl.com/Nadim-Gareen" 
+          alt="booknow" title="booknow" target="_blank">
   </map>
 
   <!-- ✅ Script to keep map responsive -->
@@ -69,5 +73,6 @@
   </script>
 </body>
 </html>
+
 
 
