--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
     <area shape="rect" coords="500,8950,570,9000" 
           href="https://tinyurl.com/Nadim-Gareen" 
           alt="booknow" title="booknow" target="_blank">
+      <!-- Outfit Inspiration (PDF) -->
+  <area shape="poly" coords="540,7667,600,7700,580,7750"
+    href="outfit.pdf" alt="Outfit inspiration"
+    title="Outfit inspiration" target="_blank">
   </map>
 
   <!-- ✅ Script to keep map responsive -->
@@ -73,6 +77,7 @@
   </script>
 </body>
 </html>
+
 
 
 
