--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>N & G Wedding Invitation</title>
 
   <!-- ✅ Social Preview -->
-  <meta property="og:title" content="N & G Wedding Invitation">
+  <meta property="og:title" content="Nadim & Gareen Wedding Invitation">
   <meta property="og:description" content="Join us in celebrating our wedding – details inside!">
   <meta property="og:image" content="https://boulosna-oss.github.io/NG/NGV1.jpg">
   <meta property="og:type" content="website">
@@ -63,9 +63,12 @@
           href="https://tinyurl.com/Nadim-Gareen" 
           alt="booknow" title="booknow" target="_blank">
       <!-- Outfit Inspiration (PDF) -->
-  <area shape="poly" coords="540,7667,600,7700,580,7750"
-    href="outfit.pdf" alt="Outfit inspiration"
-    title="Outfit inspiration" target="_blank">
+  <area shape="poly" 
+      coords="540,7667,600,7700,580,7750" 
+      href="outfit.pdf" 
+      alt="Outfit inspiration" 
+      title="Outfit inspiration" 
+      target="_blank">
   </map>
 
   <!-- ✅ Script to keep map responsive -->
@@ -77,6 +80,7 @@
   </script>
 </body>
 </html>
+
 
 
 
