--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <!-- ✅ Invitation Image with Clickable Map -->
-  <img src="NGV1.jpg" alt="Wedding Invitation" usemap="#invitemap">
+  <img src="NGVFINAL1.jpg" alt="Wedding Invitation" usemap="#invitemap">
 
   <map name="invitemap">
     <!-- Church -->
@@ -80,6 +80,7 @@
   </script>
 </body>
 </html>
+
 
 
 
