--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- ✅ Social Preview -->
   <meta property="og:title" content="Nadim & Gareen Wedding Invitation">
   <meta property="og:description" content="Join us in celebrating our wedding – details inside!">
-  <meta property="og:image" content="https://boulosna-oss.github.io/NG/NGV1.jpg">
+<meta property="og:image" content="https://boulosna-oss.github.io/NG/NGVFINAL1.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://boulosna-oss.github.io/NG/">
   <meta name="twitter:card" content="summary_large_image">
@@ -80,6 +80,7 @@
   </script>
 </body>
 </html>
+
 
 
 
