--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     @media (max-width: 600px) {
       .hotspot {
-        height: 6%; /* slightly bigger tap zones for mobile */
+        height: .5%; /* slightly bigger tap zones for mobile */
       }
     }
   </style>
@@ -112,6 +112,7 @@
   </div>
 </body>
 </html>
+
 
 
 
