--- a/index.html
+++ b/index.html
@@ -53,42 +53,42 @@
       top: 10%;
       left: 40%;
       width: 20%;
-      height: 2%;
+      height: .5%;
     }
 
     .oasis {
       top: 32%;
       left: 35%;
       width: 25%;
-      height: 4%;
+      height: .5%;
     }
 
     .riah {
       top: 45.2%;
       left: 37%;
       width: 25%;
-      height: 4%;
+      height: .5%;
     }
 
     .rsvp {
       top: 46.5%;
       left: 37%;
       width: 25%;
-      height: 4%;
+      height: .5%;
     }
 
     .accommodation {
       top: 51.5%;
       left: 35%;
       width: 30%;
-      height: 4%;
+      height: .5%;
     }
 
     .outfit {
       top: 44%;
       left: 35%;
       width: 30%;
-      height: 4%;
+      height: .5%;
     }
 
     @media (max-width: 600px) {
@@ -112,6 +112,7 @@
   </div>
 </body>
 </html>
+
 
 
 
