--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>N & G Wedding Invitation</title>
 
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
   <!-- ✅ Social Preview -->
   <meta property="og:title" content="Nadim & Gareen Wedding Invitation">
   <meta property="og:description" content="Join us in celebrating our wedding – details inside!">
@@ -19,6 +22,7 @@
       padding: 0;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
@@ -49,51 +53,36 @@
     }
 
     /* Hotspot positions (adjust as needed) */
-    .church {
-      top: 10%;
-      left: 40%;
-      width: 20%;
-      height: .5%;
-    }
-
-    .oasis {
-      top: 32%;
-      left: 35%;
-      width: 25%;
-      height: .5%;
-    }
-
-    .riah {
-      top: 45.2%;
-      left: 37%;
-      width: 25%;
-      height: .5%;
-    }
-
-    .rsvp {
-      top: 46.8%;
-      left: 37%;
-      width: 25%;
-      height: .5%;
-    }
-
-    .accommodation {
-      top: 51.5%;
-      left: 35%;
-      width: 30%;
-      height: .5%;
-    }
-
-    .outfit {
-      top: 44%;
-      left: 35%;
-      width: 30%;
-      height: .5%;
-    }
+    .church { top: 10%; left: 40%; width: 20%; height: .5%; }
+    .oasis { top: 32%; left: 35%; width: 25%; height: .5%; }
+    .riah { top: 45.2%; left: 37%; width: 25%; height: .5%; }
+    .rsvp { top: 46.8%; left: 37%; width: 25%; height: .5%; }
+    .accommodation { top: 51.5%; left: 35%; width: 30%; height: .5%; }
+    .outfit { top: 44%; left: 35%; width: 30%; height: .5%; }
 
     @media (max-width: 600px) {
       .hotspot {
-        height: .5%; /* slightly bigger tap zones for mobile */
+        height: 1%; /* slightly bigger tap zones for mobile */
+      }
+    }
+
+    /* ✅ Countdown styling */
+    #countdown {
+      margin-top: 20px;
+      font-size: 22px;
+      font-weight: bold;
+      color: #b80f2e;
+      background: #fff;
+      padding: 10px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      text-align: center;
+    }
+
+    @media (max-width: 600px) {
+      #countdown {
+        font-size: 18px;
+        width: 90%;
       }
     }
   </style>
@@ -110,12 +99,35 @@
     <a href="https://tinyurl.com/Nadim-Gareen" target="_blank" class="hotspot accommodation" title="Accommodation"></a>
     <a href="outfit.pdf" target="_blank" class="hotspot outfit" title="Outfit Inspiration"></a>
   </div>
+
+  <!-- ✅ Countdown Timer -->
+  <div id="countdown"></div>
+
+  <script>
+    // Set the wedding date
+    const eventDate = new Date("Nov 28, 2025 00:00:00").getTime();
+
+    const timer = setInterval(() => {
+      const now = new Date().getTime();
+      const distance = eventDate - now;
+
+      if (distance < 0) {
+        document.getElementById("countdown").innerHTML = "💍 The Wedding Day Has Arrived! 🎉";
+        clearInterval(timer);
+        return;
+      }
+
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      document.getElementById("countdown").innerHTML =
+        days + "d " + hours + "h " + minutes + "m " + seconds + "s ❤️";
+    }, 1000);
+  </script>
 </body>
 </html>
-
-
-
-
 
 
 
