--- a/index.html
+++ b/index.html
@@ -67,17 +67,16 @@
     }
 
     /* ✅ Countdown styling */
-    #countdown {
-      margin-top: 20px;
-      font-size: 22px;
-      font-weight: bold;
-      color: #b80f2e;
-      background: #fff;
-      padding: 10px 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-      text-align: center;
-    }
+   /* ✅ Countdown styling - transparent & elegant */
+#countdown {
+  margin-top: 20px;
+  font-size: 26px;
+  font-weight: bold;
+  color: #eee;            /* soft white/grey */
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.6); /* subtle glow for readability */
+  text-align: center;
+}
+
 
     @media (max-width: 600px) {
       #countdown {
@@ -131,6 +130,7 @@
 </script>
 </body>
 </html>
+
 
 
 
