--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
-    body {
+    body 
+    <audio id="bg-music" autoplay loop>
+  <source src="romantic-piano1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+    
+    {
       margin: 0;
       padding: 0;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -130,6 +137,7 @@
 </script>
 </body>
 </html>
+
 
 
 
