--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       bottom: 20px;
       right: 20px;
       background: #b80f2e;
-      color: #fff;
+      color: #eee;
       border: none;
       padding: 10px 15px;
       border-radius: 8px;
@@ -161,6 +161,7 @@
   </script>
 </body>
 </html>
+
 
 
 
