--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <!-- ✅ Social Preview -->
-  <meta property="og:title" content="Nadim & Gareen Wedding Invitation">
-  <meta property="og:description" content="Join us in celebrating our wedding – details inside!">
-  <meta property="og:image" content="https://boulosna-oss.github.io/NG/NGVFINAL1.jpg">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://boulosna-oss.github.io/NG/">
-  <meta name="twitter:card" content="summary_large_image">
+  <!-- Google Font for loader -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -41,10 +36,17 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 36px;
-      font-weight: bold;
+      font-family: 'Great Vibes', cursive;
+      font-size: 64px;
       color: #b80f2e;
       z-index: 10000;
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 0.8; }
+      50% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); opacity: 0.8; }
     }
 
     .invitation-container {
@@ -93,46 +95,46 @@
     }
 
     /* Music Button */
-#music-btn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: rgba(184, 15, 46, 0.6); /* semi-transparent deep red */
-  color: #fff;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  z-index: 9999;
-  transition: background 0.3s ease, transform 0.2s ease;
-}
-
-#music-btn:hover {
-  background: rgba(184, 15, 46, 0.9); /* darker when hovered */
-  transform: scale(1.05);
-}
-
-
-    /* Confetti Canvas */
-    #confetti-canvas {
+    #music-btn {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      bottom: 20px;
+      right: 20px;
+      background: rgba(184, 15, 46, 0.6); /* semi-transparent deep red */
+      color: #fff;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      z-index: 9999;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+    #music-btn:hover {
+      background: rgba(184, 15, 46, 0.9);
+      transform: scale(1.05);
+    }
+
+    /* Falling Petals */
+    .petal {
+      position: fixed;
+      top: -50px;
+      font-size: 24px;
+      animation: fall linear forwards;
       pointer-events: none;
       z-index: 9998;
+    }
+    @keyframes fall {
+      to {
+        transform: translateY(110vh) rotate(360deg);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
   <!-- Loader -->
   <div id="loader">N ❤️ G</div>
-
-  <!-- Confetti -->
-  <canvas id="confetti-canvas"></canvas>
 
   <!-- Invitation -->
   <div class="invitation-container" id="invite">
@@ -157,7 +159,6 @@
     Your browser does not support the audio element.
   </audio>
 
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
     // Loader
     window.addEventListener("load", () => {
@@ -165,28 +166,18 @@
         document.getElementById("loader").style.display = "none";
         document.getElementById("invite").style.display = "block";
 
-        // 🎉 Confetti burst
-        const duration = 3 * 1000;
-        const end = Date.now() + duration;
+        // 🌸 Romantic petals (instead of confetti)
+        for (let i = 0; i < 30; i++) {
+          let petal = document.createElement("div");
+          petal.classList.add("petal");
+          petal.innerHTML = Math.random() > 0.5 ? "🤍" : "🌸";
+          petal.style.left = Math.random() * 100 + "vw";
+          petal.style.animationDuration = (5 + Math.random() * 5) + "s";
+          petal.style.fontSize = (16 + Math.random() * 20) + "px";
+          document.body.appendChild(petal);
 
-        (function frame() {
-          confetti({
-            particleCount: 5,
-            angle: 60,
-            spread: 55,
-            origin: { x: 0 }
-          });
-          confetti({
-            particleCount: 5,
-            angle: 120,
-            spread: 55,
-            origin: { x: 1 }
-          });
-
-          if (Date.now() < end) {
-            requestAnimationFrame(frame);
-          }
-        })();
+          setTimeout(() => { petal.remove(); }, 10000);
+        }
       }, 1500); // Loader stays for 1.5s
     });
 
@@ -227,7 +218,6 @@
   </script>
 </body>
 </html>
-
 
 
 
